--- a/remote/android/app/src/main/res/layout/activity_main.xml
+++ b/remote/android/app/src/main/res/layout/activity_main.xml
@@ -10,36 +10,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
-
+        tools:layout_editor_absoluteY="1dp"
+        android:background="@color/davysGrey">
 
         <RelativeLayout
-            android:layout_weight="1"
-            android:background="@android:color/holo_blue_bright"
             android:layout_width="0dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/graniteGray">
 
             <com.example.myapplication.CircleView
                 android:id="@+id/circle_left"
-                android:layout_centerInParent="true"
                 android:layout_width="20sp"
                 android:layout_height="20sp"
-                android:backgroundTint="@android:color/black"/>
+                android:layout_centerInParent="true"
+                android:backgroundTint="@color/platinum" />
         </RelativeLayout>
+
         <RelativeLayout
-            android:layout_weight="1"
-            android:background="@android:color/holo_orange_light"
+            android:id="@+id/rightSlate"
             android:layout_width="0dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
             <com.example.myapplication.CircleView
                 android:id="@+id/circle_right"
-                android:layout_centerInParent="true"
                 android:layout_width="20sp"
                 android:layout_height="20sp"
-                android:foreground="@android:color/black"/>
+                android:layout_centerInParent="true"
+                android:foreground="@color/smokyBlack" />
         </RelativeLayout>
-
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
