--- a/remote/android/app/src/main/res/values/colors.xml
+++ b/remote/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="davysGrey">#595959</color>
     <color name="graniteGray">#606060</color>
     <color name="warningYellow">#FAD201</color>
+    <color name="jet">#333333</color>
 </resources>
