--- a/remote/android/app/src/main/res/values/styles.xml
+++ b/remote/android/app/src/main/res/values/styles.xml
@@ -1,26 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/davysGrey</item>
         <item name="colorPrimaryDark">@color/graniteGray</item>
         <item name="colorAccent">@color/platinum</item>
-    </style>
-
-    <style name="AppTheme.SplashScreen" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="AppTheme.SplashScreen" parent="AppTheme.NoActionBar">
         <item name="android:windowDisablePreview">true</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="Divider">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">5dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+        <item name="android:color">@color/platinum</item>
     </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
 </resources>
