--- a/remote/android/app/src/main/res/layout/activity_splash.xml
+++ b/remote/android/app/src/main/res/layout/activity_splash.xml
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/universitylogo"
+            app:srcCompat="@drawable/crest"
             android:contentDescription="@string/todo" />
     </LinearLayout>
 
