--- a/remote/android/app/src/main/res/layout/activity_main.xml
+++ b/remote/android/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent">
+
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/davysGrey"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        android:background="@color/davysGrey">
+        tools:layout_editor_absoluteY="1dp">
+
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -39,6 +39,34 @@
                 android:layout_height="20sp"
                 android:layout_centerInParent="true"
                 android:foreground="@color/smokyBlack" />
+
         </RelativeLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--    <RelativeLayout
+        android:id="@+id/mask"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="#010101"
+        android:alpha="0.8"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:text=""
+            android:textColor="@color/platinum"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content" />
+    </RelativeLayout>
+    <Button
+        android:id="@+id/connectButton"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20sp"
+        android:text=""
+        android:textColor="#41FFB0"
+        android:background="#026440"/>-->
+</RelativeLayout>
