--- a/remote/android/app/src/main/res/layout/activity_main.xml
+++ b/remote/android/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -41,7 +42,47 @@
                 android:foreground="@color/smokyBlack" />
 
         </RelativeLayout>
+
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="30sp">
+
+        <LinearLayout
+            app:layout_constraintRight_toLeftOf="@+id/connection_status"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="2sp"
+            android:layout_marginEnd="5sp"
+            android:layout_height="28sp"
+            android:layout_width="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:text=""/>
+            <ImageView
+                android:id="@+id/battery_level"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/battery_level_unknown"/>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/connection_status"
+            android:layout_marginTop="2sp"
+            android:layout_marginEnd="20sp"
+            android:layout_width="28sp"
+            android:layout_height="28sp"
+            android:background="@drawable/signal_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <Button
         android:id="@+id/connectButton"
         android:layout_width="120dp"
